RELEASE HISTORY OF THE "MALDIquantForeign" PACKAGE
==================================================

CHANGES in MALDIquantForeign VERSION 0.13 [2021-12-23]
------------------------------------------------------

DOCUMENTATION

* `exportMzMl` and `exportImzMl` also support the export of
  `MALDIquant::MassPeaks` objects. (Before just `MassSpectrum` was mentioned.)

MODIFICATIONS

* Change URLs from http to https where possible.

INTERNAL CHANGES

* Test for `MassSpectrum` and `MassPeaks` list in `.write{Imz,Mz}MlDocument`.

* Remove `is.null(getGeneric(...))` tests before setting generics for
  S4 methods to avoid errors in package loading (especially with
  `pkgload::load_all()`).

* `.writeImzMlDocument` uses `MALDIquant::coordinates` explicitly to avoid
  method dispatch conflict in combination with the `sp` package.
  Reported by Denis Abu Sammour (#33).


CHANGES in MALDIquantForeign VERSION 0.12.2 [2020-09-18]:
---------------------------------------------------------

* Fix `.autoSep` and `.autoHeader` to look just in the first line of an ascii
  document for separator/header information. Before the whole file was search
  but just the first line reported anyway. This results in an unnecessary long
  reading time. Affected functions (if arguments "sep" and "header" where not
  given by the user: .csv, .tab, .txt import: `import`, `importCsv`,
  `importTab`, `importTxt`.


CHANGES in MALDIquantForeign VERSION 0.12.1 [2020-03-09]:
---------------------------------------------------------

* Fix reading of txt, csv, tab files if "skip" argument is used ("skip" was
  applied twice). Affected functions: .csv, .tab, .txt import: `import`,
  `importCsv`, `importTab`, `importTxt`.
  Bug reported by Samuel Granjeaud (#29).


CHANGES in MALDIquantForeign VERSION 0.12 [2019-01-30]:
-------------------------------------------------------

* Fix reading of mzML with "non-standard data" arrays.
  Bug reported by Paul Turner.

